[gd_scene load_steps=29 format=3 uid="uid://dx7s5w0ga5df6"]

[ext_resource type="Script" path="res://win5.gd" id="1_251pf"]
[ext_resource type="FontFile" uid="uid://c73rv4ejrg5bm" path="res://objetos/Cute Dino.ttf" id="1_ghpqo"]
[ext_resource type="Texture2D" uid="uid://b11g3b5v5m5d2" path="res://fondos/fondocielo2.png" id="3_wewy2"]
[ext_resource type="Texture2D" uid="uid://c3v7kyh4ocsm0" path="res://Carpeta con las animaciones/globo4.png" id="4_c0syx"]
[ext_resource type="Texture2D" uid="uid://txfdieoue6c" path="res://Carpeta con las animaciones/globoazul.png" id="5_6qsla"]
[ext_resource type="Script" path="res://Node2D.gd" id="6_s2dol"]
[ext_resource type="Texture2D" uid="uid://dhp5wwsqsh153" path="res://Carpeta con las animaciones/globorojo.png" id="6_tut2u"]
[ext_resource type="Texture2D" uid="uid://dx1v0fha6mq7v" path="res://objetos/marco.png" id="7_ewtkp"]
[ext_resource type="Texture2D" uid="uid://mghe4bixxmw8" path="res://Carpeta con las animaciones/globo blanco.png" id="7_roh8g"]
[ext_resource type="AudioStream" uid="uid://pgn2jwpfegr5" path="res://musica2/U uva .mp3" id="8_klwha"]
[ext_resource type="Texture2D" uid="uid://cbuvomll6dlh3" path="res://objetos/Mochilaa.png" id="10_vas0a"]
[ext_resource type="Texture2D" uid="uid://c3gem8j3jtogo" path="res://objetos/mochilaaaayanomecabienestamonda.png" id="11_glke7"]
[ext_resource type="Script" path="res://botoncito4.gd" id="12_kif1k"]
[ext_resource type="Texture2D" uid="uid://4bnt17wiqwph" path="res://objetos/trofeo.png" id="13_mpj20"]
[ext_resource type="Texture2D" uid="uid://xgia3a20vnft" path="res://objetos/clickmanitoowo.png" id="15_4twp7"]
[ext_resource type="Texture2D" uid="uid://bkgux572mvwgd" path="res://objetos/mano animada uwu.png" id="16_dtmdf"]
[ext_resource type="Texture2D" uid="uid://osqla68ctb0f" path="res://objetos/uvaa.png" id="17_1yj2s"]
[ext_resource type="AudioStream" uid="uid://ckehea8b7mgi8" path="res://musica2/brass-fanfare-with-timpani-and-winchimes-reverberated-146260.mp3" id="18_s2cx4"]
[ext_resource type="AudioStream" uid="uid://di72iyivey1cq" path="res://musica2/Viento.mp3" id="19_rhwsu"]

[sub_resource type="Theme" id="Theme_xoarb"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)
Label/constants/outline_size = 11
Label/font_sizes/font_size = 41
Label/fonts/font = ExtResource("1_ghpqo")

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_ti4c4"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qcgr5"]
emission_shape_offset = Vector3(1, 5, 8)
emission_shape_scale = Vector3(4, 8, 7)
emission_shape = 3
emission_box_extents = Vector3(120, 0, 80)
direction = Vector3(6, 0, 0)
spread = 122.4
directional_velocity_min = 87.4
directional_velocity_max = 188.2
directional_velocity_curve = SubResource("CurveXYZTexture_ti4c4")
gravity = Vector3(0, 98, 0)
turbulence_enabled = true
turbulence_noise_strength = 1.75
turbulence_noise_scale = 7.208
turbulence_noise_speed_random = 0.43

[sub_resource type="Animation" id="Animation_qdfqn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_in8hx"]
resource_name = "estoicismoo"
length = 2.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.11, 1.11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_27j8k"]
_data = {
"RESET": SubResource("Animation_qdfqn"),
"estoicismoo": SubResource("Animation_in8hx")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_vj6ql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_vas0a")
}, {
"duration": 1.0,
"texture": ExtResource("11_glke7")
}],
"loop": true,
"name": &"animacion",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_416s4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_noqyb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_4twp7")
}, {
"duration": 1.0,
"texture": ExtResource("16_dtmdf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xoarb")
script = ExtResource("1_251pf")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(578, 326)
scale = Vector2(1.166, 0.656)
texture = ExtResource("3_wewy2")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-61, -55)
amount = 10
process_material = SubResource("ParticleProcessMaterial_qcgr5")
texture = ExtResource("4_c0syx")
lifetime = 10.0
trail_lifetime = 0.01

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(-98, 212)
amount = 10
process_material = SubResource("ParticleProcessMaterial_qcgr5")
texture = ExtResource("5_6qsla")
lifetime = 10.0
trail_lifetime = 0.01

[node name="GPUParticles2D3" type="GPUParticles2D" parent="."]
position = Vector2(-91, 234)
amount = 10
process_material = SubResource("ParticleProcessMaterial_qcgr5")
texture = ExtResource("6_tut2u")
lifetime = 10.0
trail_lifetime = 0.01

[node name="GPUParticles2D4" type="GPUParticles2D" parent="."]
position = Vector2(-71, 191)
amount = 7
process_material = SubResource("ParticleProcessMaterial_qcgr5")
texture = ExtResource("7_roh8g")
lifetime = 10.0
trail_lifetime = 0.01

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_27j8k")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(595, 339)
stream = ExtResource("8_klwha")
volume_db = 12.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 106.0
offset_right = 995.0
offset_bottom = 550.0
pivot_offset = Vector2(398.514, 218.344)
texture = ExtResource("7_ewtkp")

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 38.0
offset_top = 34.0
offset_right = 791.0
offset_bottom = 410.0

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 263.0
offset_top = 56.0
offset_right = 696.0
offset_bottom = 102.0
text = "Felicitaciones"

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 72.0
offset_top = 213.0
offset_right = 505.0
offset_bottom = 255.0
text = "1"

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 654.0
offset_top = 249.0
offset_right = 1087.0
offset_bottom = 291.0
text = "1"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 408.0
offset_right = 630.0
offset_bottom = 522.0
flat = true

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Button2"]
position = Vector2(79, 50.9999)
scale = Vector2(0.526, 0.326)
sprite_frames = SubResource("SpriteFrames_vj6ql")
animation = &"animacion"

[node name="Button40" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
offset_left = 464.0
offset_top = 379.0
offset_right = 1179.0
offset_bottom = 924.0
scale = Vector2(0.30502, 0.302766)
theme_override_styles/focus = SubResource("StyleBoxEmpty_416s4")
flat = true
script = ExtResource("12_kif1k")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Button40"]
position = Vector2(344.24, 264.23)
scale = Vector2(1.78349, 1.07013)
sprite_frames = SubResource("SpriteFrames_vj6ql")
animation = &"animacion"

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("6_s2dol")

[node name="aparecer5" type="Timer" parent="Node2D"]
wait_time = 2.169

[node name="Node2D2" type="Node2D" parent="."]
script = ExtResource("6_s2dol")

[node name="aparecer5" type="Timer" parent="Node2D2"]
wait_time = 2.169

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 518.0
offset_top = 209.0
offset_right = 701.0
offset_bottom = 304.0
text = "Vocal
 \"U u\""

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 251.0
offset_right = 487.0
offset_bottom = 346.0
text = "\"Uva\""

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 325.0
offset_top = 377.0
offset_right = 508.0
offset_bottom = 472.0
text = "\"Uva\""

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 357.0
offset_right = 887.0
offset_bottom = 452.0
text = "\"Uva\""

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 838.0
offset_top = 473.0
offset_right = 1021.0
offset_bottom = 568.0
text = "\"Uva\""

[node name="Trofeo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(565, 346)
scale = Vector2(2.6, 2.56)
texture = ExtResource("13_mpj20")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(616, 461)
sprite_frames = SubResource("SpriteFrames_noqyb")

[node name="Uvaa" type="Sprite2D" parent="."]
position = Vector2(381.25, 332.75)
scale = Vector2(0.673333, 0.673333)
texture = ExtResource("17_1yj2s")

[node name="Uvaa2" type="Sprite2D" parent="."]
position = Vector2(899, 429)
scale = Vector2(0.673333, 0.673333)
texture = ExtResource("17_1yj2s")

[node name="Uvaa3" type="Sprite2D" parent="."]
position = Vector2(362, 205)
scale = Vector2(0.673333, 0.673333)
texture = ExtResource("17_1yj2s")

[node name="Uvaa4" type="Sprite2D" parent="."]
position = Vector2(759, 310)
scale = Vector2(0.673333, 0.673333)
texture = ExtResource("17_1yj2s")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_s2cx4")

[node name="Ambientacion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_rhwsu")
autoplay = true

[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button40" to="Button40" method="_on_pressed"]
[connection signal="timeout" from="Node2D/aparecer5" to="Node2D" method="_on_aparecer_5_timeout"]
[connection signal="timeout" from="Node2D2/aparecer5" to="Node2D2" method="_on_aparecer_5_timeout"]
